--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,8 @@ body {
             map.Ui.Scale.visible(false);
             map.zoomRange({min:6, max:12});
 
+            asdasdasdlkasjdlkasdasdasdasdwasd
+
           }
         </script>
   </head>
